# pronexus-pipeline

./: .gitignore  README.md
backend/: .env.example  docker-compose.yml  main.py  pyproject.toml  railway-worker.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 106a1649f185_add_owners_table.py  25210263f367_create_businesses_and_scrape_jobs_tables.py  68c74ce8ed75_use_timestamptz_for_datetime_columns.py  81536e733526_add_emails_table.py
backend/app/: config.py  database.py  main.py  worker.py
backend/app/api/: routes.py  schemas.py
backend/app/models/: db.py
backend/app/pipeline/: discovery.py  email_finder.py  owner_id.py  search_fallback.py  website_scraper.py
backend/app/tasks/: enrich.py
backend/scripts/: test_discovery.py  test_owner_id.py
frontend/: package.json  railway.toml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/search/[id]/: page.tsx
frontend/src/components/: export-menu.tsx  job-card.tsx  results-table.tsx  search-bar.tsx
frontend/src/lib/: api.ts  query-provider.tsx  schemas.ts  types.ts
