[project]
name = "pronexus-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.2",
    "sqlmodel>=0.0.37",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "psycopg2-binary>=2.9.11",
    "groq>=1.1.2",
    "celery[redis]>=5.4.0",
]
